[package]
name = "rust-stock-liveproject"
version = "0.1.0"
authors = ["Nate Clark <natec425@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
yahoo_finance_api = {"version" = "1.0.2", features = ["blocking"]}